debugbar, permissions for articles with relationship, github navbar

--- a/resources/sass/admin/admin.scss
+++ b/resources/sass/admin/admin.scss
@@ -41,3 +41,20 @@
   position: relative;
   bottom: 8px;
 }
+
+.github-link {
+  left: -30px;
+  top: 0;
+  position: absolute;
+}
+
+.github-link i {
+  font-size: 2.5em;
+  color: #000000 !important;
+}
+
+@media (max-width: 766px) {
+  .app-header.navbar .navbar-brand {
+    display: none;
+  }
+}
